--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 90px;
+    padding-top: 140px;
 }
 
 .navbar {
@@ -74,6 +74,12 @@ body {
 }
 
 @media (max-width: 992px) {
+    body {
+        padding-top: 60px;
+    }
+    .main-logo {
+        display: block;
+    }
     .projects-menu ul {
         display: none;
     }
