--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
         padding-top: 60px;
     }
     .main-logo {
-        display: block;
+        height: 60px;
     }
     .projects-menu ul {
         display: none;
