--- a/style.css
+++ b/style.css
@@ -64,6 +64,29 @@ body {
     box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 8px rgba(32, 32, 32, 0.6);
 }
 
+#info-bullets {
+    display: grid;
+    grid-template-areas: 
+        "bullet1 bullet2"
+        "bullet3 bullet4";
+}
+
+.bullet1 {
+    grid-area: "bullet1";
+}
+
+.bullet2 {
+    grid-area: "bullet2";
+}
+
+.bullet3 {
+    grid-area: "bullet3";
+}
+
+.bullet4 {
+    grid-area: "bullet4";
+}
+
 @keyframes fade-in {
     from {
       opacity: 0;
