--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 140px;
+    padding-top: 130px;
 }
 
 .navbar {
@@ -14,54 +14,37 @@ body {
     cursor: pointer;  
 }
 
-.wrapper .overlay {
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    color: white;
-    width: 40%;
-    opacity: 0;
-}
-
-.wrapper2 .overlay {
-    position: absolute;
-    top: 30%;
-    left: 10%;
-    color: white;
-    width: 60%;
-    opacity: 0;
-}
-
-.wrapper img, .wrapper2 img {
-    transition: 1s ease;
-}
-
-.wrapper:hover img, .wrapper2:hover img {
-    opacity: 0.9;
-    filter: grayscale(70%) brightness(30%) sepia(25%) hue-rotate(10deg) saturate(300%) contrast(0.8);
-}
-
-.wrapper:hover .overlay, .wrapper2:hover .overlay {
-    opacity: 1;
-}
-
-.wrapper:hover h2, .wrapper:hover p, .wrapper2:hover h2, .wrapper2:hover p {
-    animation: fade-in 1s;
-    transition: ease;
+h2, h4, i {
+    color: #8C9487;
 }
 
 .button-animate .btn {
     transition: 1s ease;
 }
 
+.btn-green {
+    background-color: #8C9487;
+    color: white;
+}
+
 .btn:hover {
     transform: scale(1.1);
-    transition: 1s ease;
+    background-color: #333333;
+    color: white;
+}
+
+.arrow-white {
+    color: white;
 }
 
 .form-control:focus {
     border-color: #333333;
     box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 8px rgba(32, 32, 32, 0.6);
+}
+
+.about-first {
+    color: #8C9487;
+    font-weight: bold;
 }
 
 #info-bullets {
@@ -85,6 +68,18 @@ body {
 
 .bullet4 {
     grid-area: "bullet4";
+}
+
+#back-to-top:hover {
+    background-color: transparent;
+}
+
+#back-to-top i {
+    transition: 1s ease;
+}
+
+#back-to-top:hover i {
+    color: #333333;
 }
 
 @keyframes fade-in {
@@ -113,5 +108,44 @@ body {
         align-items: center;
         gap: 10px;
         width: 90vw;
+    }
+}
+
+@media (min-width: 993px) {
+    .wrapper .overlay {
+        position: absolute;
+        top: 50%;
+        left: 10%;
+        color: white;
+        width: 40%;
+        opacity: 0;
+    }
+    
+    .wrapper2 .overlay {
+        position: absolute;
+        top: 30%;
+        left: 10%;
+        color: white;
+        width: 60%;
+        opacity: 0;
+    }
+    
+    .wrapper img, .wrapper2 img {
+        transition: 1s ease;
+    }
+    
+    .wrapper:hover img, .wrapper2:hover img {
+        opacity: 0.9;
+        filter: grayscale(70%) brightness(30%) sepia(25%) hue-rotate(10deg) saturate(300%) contrast(0.8);
+    }
+    
+    .wrapper:hover .overlay, .wrapper2:hover .overlay {
+        opacity: 1;
+    }
+    
+    .wrapper:hover h2, .wrapper:hover p, .wrapper2:hover h2, .wrapper2:hover p {
+        animation: fade-in 1s;
+        transition: ease;
+        color: white;
     }
 }
